fix gallery display on mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -103,8 +103,12 @@ ul {
   list-style: none;
   li {
     img {
-      height: 250px;
-      width: 250px;
+      height: 20vw;
+      width: 20vw;
+      max-height: 250px;
+      max-width: 250px;
+      min-height: 150px;
+      min-width: 150px;
       border: 5px solid #ffffff;
       border-radius: 10px;
     }
